Sidebar.css: prevent overflow, hide scrollbar

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -18,6 +18,18 @@
 
 .sidebar__channels {
   flex: 1;
+  overflow: scroll;
+}
+
+/* hide scrollbar for Chrome, Safari and Opera */
+.sidebar__channels::-webkit-scrollbar {
+  display: none;
+}
+
+/* hide scrollbar for IE, Edge and Firefox */
+.sidebar__channels {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .sidebar__addChannel {
